# BeamKlipper

./: .gitignore  .gitmodules  README.md  build.gradle  gradle.properties  settings.gradle
.github/: FUNDING.yml
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/klipper/: beam_beeper.cfg
app/src/main/assets/klipper/beam_ext/: beam_beeper.py  beam_camera.py
app/src/main/assets/moonraker/: bootstrap.py  default.conf
app/src/main/assets/moonraker_telegram_bot/: bootstrap.py  default.conf
app/src/main/assets/shaders/: beam_intro.fs  beam_intro.vs
app/src/main/java/com/arthenica/ffmpegkit/: FFmpegKitConfig.java
app/src/main/java/com/arthenica/smartexception/java/: Exceptions.java
app/src/main/java/org/nanohttpd/protocols/http/: ServerRunnable.java
app/src/main/java/org/nanohttpd/protocols/http/response/: Response.java
app/src/main/java/org/nanohttpd/protocols/websockets/: NanoWSD.java  WebSocket.java
app/src/main/java/ru/ytkab0bp/beamklipper/: BeamServerData.java  BundleInstaller.java  CloudActivity.java  InstanceIcon.java  KlipperApp.java  KlipperInstance.java  MainActivity.java  PermissionsChecker.java
app/src/main/java/ru/ytkab0bp/beamklipper/cloud/: AndroidPlatform.java  CloudAPI.java  CloudController.java
app/src/main/java/ru/ytkab0bp/beamklipper/db/: BeamDB.java
app/src/main/java/ru/ytkab0bp/beamklipper/events/: BeamServerDataUpdatedEvent.java  CloudFeaturesUpdatedEvent.java  CloudLoginStateUpdatedEvent.java  CloudNeedQREvent.java  CloudUserInfoUpdatedEvent.java  InstanceCreatedEvent.java  InstanceDestroyedEvent.java  InstanceStateChangedEvent.java  InstanceUpdatedEvent.java  WebFrontendChangedEvent.java  WebStateChangedEvent.java
app/src/main/java/ru/ytkab0bp/beamklipper/provider/: InstanceFilesProvider.java
app/src/main/java/ru/ytkab0bp/beamklipper/serial/: HostSerial.java  HostSerialHandler.java  KlipperMessageBlockConstants.java  KlipperProbeTable.java  NativeSerialPort.java  SerialNative.java  SerialProxy.java  UsbSerialManager.java
app/src/main/java/ru/ytkab0bp/beamklipper/service/: BaseKlippyService.java  BaseMoonrakerService.java  BasePythonService.java  BaseRemoteControlService.java  CameraService.java  HostSerialService.java  KlippyService_0.java  KlippyService_1.java  KlippyService_2.java  KlippyService_3.java  MoonrakerService_0.java  MoonrakerService_1.java  MoonrakerService_2.java  MoonrakerService_3.java  WebService.java
app/src/main/java/ru/ytkab0bp/beamklipper/service/impl/: KlippyService_0.java  KlippyService_1.java  KlippyService_2.java  KlippyService_3.java  MoonrakerService_0.java  MoonrakerService_1.java  MoonrakerService_2.java  MoonrakerService_3.java  RemoteControlService_0.java  RemoteControlService_1.java  RemoteControlService_2.java  RemoteControlService_3.java
app/src/main/java/ru/ytkab0bp/beamklipper/utils/: LogUploader.java  Prefs.java  ViewUtils.java
app/src/main/java/ru/ytkab0bp/beamklipper/view/: BeamButton.java  BoostySubsView.java  ChangeLogBottomSheet.java  EditTextRowView.java  FadeRecyclerView.java  GLNoiseView.java  GLShader.java  GLShadersManager.java  HomeView.java  KlipperInstanceView.java  PermissionRowView.java  PreferencesCardView.java  QRCodeAlertDialog.java  RefBadgeView.java  SimpleRecyclerAdapter.java  SimpleRecyclerItem.java  SmoothItemAnimator.java  SmoothResizeFrameLayout.java  StartStopButton.java  TextColorImageSpan.java
app/src/main/java/ru/ytkab0bp/beamklipper/view/preferences/: PreferenceHeaderView.java  PreferenceSwitchView.java  PreferenceValueView.java  PreferenceView.java
app/src/main/java/ru/ytkab0bp/beamklipper/view/recycler/: CloudPreferenceItem.java
app/src/main/jni/: beeper.cpp  serial.cpp
app/src/main/jni/host_mcu/: README.md  autoconf.h  compile_time_request.c  console.c  gpio.c  host_mcu.cpp  internal.h  sched.c
app/src/main/jni/pty/: openpty.c  pty.h
app/src/main/res/drawable/: ic_add_outline_28.xml  ic_boosty.xml  ic_box_heart_outline_28.xml  ic_brain_outline_28.xml  ic_chevron_up_outline_28.xml  ic_clock_circle_dashed_outline_24.xml  ic_cloud_plus_outline_28.xml  ic_cube_box_outline_28.xml  ic_external_link_outline_24.xml  ic_game_outline_28.xml  ic_globe_outline_28.xml  ic_grid_layout_outline_28.xml  ic_home_outline_28.xml  ic_inbox_outline_28.xml  ic_location_outline_28.xml  ic_magic_hat_outline_28.xml  ic_moon_outline_28.xml  ic_play_28.xml  ic_printer_outline_28.xml  ic_robot_outline_28.xml  ic_sailing_24.xml  ic_services_outline_28.xml  ic_shopping_cart_outline_28.xml  ic_sneaker_outline_28.xml  ic_square_stack_up_outline_28.xml  ic_stars_outline_28.xml  ic_stop_24.xml  ic_sync_outline_28.xml  ic_telegram.xml  ic_truck_outline_28.xml  ic_zero_ruble_outline_28.xml  icon_adaptive_background.xml
app/src/main/res/mipmap-v32/: icon.xml
app/src/main/res/values/: attrs.xml  colors.xml  ids.xml  strings.xml  styles.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: device_filter.xml
gradle/wrapper/: gradle-wrapper.properties
remotebeamlib/: build.gradle
remotebeamlib/src/main/java/ru/ytkab0bp/remotebeamlib/: IPlatform.java  RemoteBeam.java  RemoteBeamConnection.java
